# agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo.py
examples/sample_data/: README.md  sales_data.csv
src/insightflow/: __init__.py  config.py  errors.py  graph.py  server.py  state.py
src/insightflow/agents/: __init__.py  analyst.py  cleaner.py  reporter.py  scout.py  visualizer.py
src/insightflow/context/: __init__.py  dataframe_context.py
src/insightflow/data_mcp/: __init__.py  data_explorer.py  mcp_bridge.py  permissions.py
src/insightflow/eval/: __init__.py  metrics.py  report.py
src/insightflow/llm/: __init__.py  resilient_client.py  token_tracker.py
src/insightflow/observability/: __init__.py  export.py  tracer.py
src/insightflow/static/: index.html
src/insightflow/tools/: __init__.py  data_tools.py
src/insightflow/utils/: __init__.py  json_parser.py
tests/: __init__.py  test_eval.py  test_mcp_server.py  test_state.py  test_tools.py  test_tracer.py  test_v2_features.py
